# fp2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench_util.rs  fp2_bench.rs
scripts/: gen_fp.sage
src/: fields.rs  fp2_gen.rs  fp_gen.rs  fq.rs  lib.rs  test_macros.rs  utils64.rs
src/finitefield/: fp2_gen.rs  fp_gen.rs
src/traits/: fp.rs  fp2.rs  mod.rs
tests/: test_dlp.rs  test_fields.rs  tests.rs
