[package]
name = "fp2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
hex = "0.4.3"
num-bigint = "0.4.3"
sha2 = "0.10.2"
sha3 = "0.10.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
