[package]
name = "fp2_rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["test_macros"]
test_macros = []

[dependencies]
rand_core = "0.6"

[dev-dependencies]
criterion = { version = "0.5" }
sha2 = "0.10.2"
hex = "0.4.3"
num-bigint = "0.4.3"

[[bench]]
name = "benchmark_fp2"
path = "benches/fp2_bench.rs"
harness = false
